# biterator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  init-development.sh  lint.sh  pyproject.toml  utils.py
.run/: Doctests in biterators.run.xml
biterator/: __init__.py  _biterators.py  _bits.py  biterators.py  bits.py  exceptions.py
infra/: utils.py
src/: __init__.py  bits.py
src/biterate/: __init__.py  biterators.py  bits.py
src/biterator/: __init__.py
tests/: __init__.py  test_biterator.py
