[tool.poetry]
name = "bits"
version = "0.1.0"
description = ""
authors = ["derek-strasters <paracite.org@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pylint = "*"
black = "*"
isort = "*"
pydocstyle = "*"
pytest = "*"

flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"
flake8-quotes = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target_version = ["py38"]
line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pydocstyle]
match-dir = "(?!venv).*"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"
