[tool.poetry]
name = "bits"
version = "0.1.0"
description = "Tools for working directly with bits"
authors = ["derek-strasters <paracite.org@gmail.com>"]
readme = "README.md"
packages = [{include = "biterate", from = "src"}]

[tool.poetry.dependencies]
python = "3.10"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
isort = "*"
pydocstyle = "*"
pytest = "*"
mypy = "*"
coverage = "*"

flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target_version = ["py38"]
line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pydocstyle]
match-dir = "(?!venv).*"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.basic]
good-names = "_,a,b,c,d,ex,i,j,k,n,m,T,T_co,T_contra,r,s,x,y,z"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
function-rgx = "[a-z_][a-z0-9_]{,30}$"
attr-rgx = "[a-z_][a-z0-9_]{1,}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,30}|(__.*__))$"
argument-rgx = "[a-z_][a-z0-9_]{1,30}$"